fix scrollbar

--- a/app.css
+++ b/app.css
@@ -32,7 +32,6 @@
   max-width: 40%;*/
   width: 500px;
   height: 500px;
-  overflow: scroll;
 }
 
 #table {
